--- a/templates/main.html
+++ b/templates/main.html
@@ -16,7 +16,7 @@
 </div>
 
 <div id="author">
-    author
+    <p> @author: lif314<br/> @email: 2216155077@qq.com</p>
 </div>
 
 <div id="time">
@@ -24,11 +24,11 @@
 </div>
 
 <div id="left-top">
-    总量趋势
+<!--    总量趋势-->
 </div>
 
 <div id="left-bottom">
-    增量趋势
+<!--    增量趋势-->
 </div>
 
 <div id="center-top">
@@ -74,7 +74,7 @@
 
 <!--中国地图-->
 <script src="../static/js/china_map.js"></script>
-<script src="../static/js/main.js"></script>
+<script src="../static/js/controller.js"></script>
 <!--全国疫情走势-->
 <script src="../static/js/ec_left_top.js"></script>
 <!--全国新增疫情数据-->
