--- a/templates/main.html
+++ b/templates/main.html
@@ -8,9 +8,21 @@
     <script src="../static/js/china.js"></script>
     <script src="../static/js/worldcloud.js"></script>
     <link href="../static/css/main.css" rel="stylesheet">
+    <script src="../static/js/macarons.js"></script>
+    <script src="../static/js/vintage.js"></script>
 </head>
 <body>
 <!--绝对定位划分区域-->
+<!--<div id="theme">-->
+<!--    <span>Theme: </span>-->
+<!--    <select id="theme-selector">-->
+<!--        <option value="macarons">macarons</option>-->
+<!--        <option value="vintage">vintage</option>-->
+<!--        <option value="dark">dark</option>-->
+<!--    </select>-->
+<!--</div>-->
+
+
 <div id="title">
     全国疫情追踪
 </div>
@@ -24,11 +36,11 @@
 </div>
 
 <div id="left-top">
-<!--    总量趋势-->
+    <!--    总量趋势-->
 </div>
 
 <div id="left-bottom">
-<!--    增量趋势-->
+    <!--    增量趋势-->
 </div>
 
 <div id="center-top">
@@ -74,7 +86,6 @@
 
 <!--中国地图-->
 <script src="../static/js/china_map.js"></script>
-<script src="../static/js/controller.js"></script>
 <!--全国疫情走势-->
 <script src="../static/js/ec_left_top.js"></script>
 <!--全国新增疫情数据-->
@@ -83,6 +94,7 @@
 <script src="../static/js/ec_right_top.js"></script>
 <!--词云图-->
 <script src="../static/js/ec_right_bottom.js"></script>
+<script src="../static/js/controller.js"></script>
 
 </body>
 </html>
