--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,6 +3,15 @@ body{
     background: #333;
 }
 
+/*主题*/
+#theme{
+    position: absolute;
+	height: 10%;
+    font-size: 20px;
+	top: 1%;
+	right: 1%;
+}
+
 /*标题*/
 #title{
     position: absolute;
@@ -83,7 +92,7 @@ body{
 	align-items: center;
 	justify-content: center;
 	font-size: 20px;
-	color: white;
+	color: cornflowerblue;
 }
 
 /*中国地图分布*/
